# quanta

./: AUTHORS  CMakeLists.txt  ChangeLog  DESIGN  HACKING  Mainpage.dox  Makefile.am  Makefile.in  Messages.sh  NEWS  Quanta-3.3-plan.kno  README  TODO  VERSION  allprofilesmodel.cpp  allprofilesmodel.h  breakpointcontroller.cpp  breakpointcontroller.h  breakpoints.cpp  breakpoints.h  browserappconfig.cpp  browserappconfig.h  browserappconfig.ui  browserappjob.cpp  common.h  connection.cpp  connection.h  crossfireplugin.cpp  dcopwindowmanagerif.h  debuggercontroller.cpp  debuggercontroller.h  debugjob.cpp  debugjob.h  debugsession.cpp  debugsession.h  document.cpp  document.h  dtds.cpp  dtds.h  executebrowserplugin.cpp  (+88 more)
connections/: CMakeLists.txt  connections.cpp  connections.ui  connectionsmodel.cpp  connectionsmodel.h  kcm_kdev_sqlconnections.desktop
data/: CMakeLists.txt  Makefile.am  Makefile.in  a.tag  actions.rc  base.tag  basefont.tag  body.tag  chars  documentation.html  frameset.tag  hr.tag  html.tag  li.tag  ol.tag  php.xml  plugins.rc  quanta-dialog-xml.html  quanta.docrc  syntax.xml  table.tag  tagdata.rc  tbody.tag  td.tag  th.tag  thead.tag  tips  toolbars.rc  tr.tag  ul.tag
debuggers/: CMakeLists.txt
dialogs/: Makefile.am  Makefile.in  abbreviation.cpp  abbreviation.h  abbreviations.ui  actionconfigdialog.cpp  actionconfigdialog.h  actionconfigdialogs.ui  actioneditdialog.cpp  casewidget.ui  codetemplatedlgs.ui  codetemplatedlgs.ui.h  copyto.cpp  copyto.h  copytos.cpp  copytos.h  copytos.ui  debuggeroptionss.ui  dirtydialog.cpp  dirtydialog.h  dirtydialog.ui  dirtydlg.cpp  dirtydlg.h  donationdialog.ui  donationdialog.ui.h  dtdselectdialog.cpp  dtdselectdialog.h  dtdselectdialog.ui  dtdselectdialog.ui.h  dtepeditdlg.cpp  dtepeditdlg.h  dtepeditdlgs.ui  dtepstructureeditdlgs.ui  edittoolbars.ui  filemasks.cpp  filemasks.h  filemaskss.cpp  filemaskss.h  filemaskss.ui  filesmask.cpp  (+38 more)
document/: CMakeLists.txt  TODO  abstractxmlmodel.cpp  abstractxmlmodel.h  abstractxmlmodelnode.h  htmldocumentmodel.cpp  htmldocumentmodel.h  kdevxmldocument.desktop  xmldocument.cpp  xmldocument.h  xmldocumentmodel.cpp  xmldocumentmodel.h  xmldocumentplugin.cpp  xmldocumentplugin.h  xmldocumentview.cpp  xmldocumentview.h  xmltree.cpp  xmltree.h  xsddocumentmodel.cpp  xsddocumentmodel.h
formatter/: CMakeLists.txt  TODO  formatter.h  formatterplugin.cpp  formatterplugin.h  formatterpreferences.cpp  formatterpreferences.h  formatterwidget.ui  htmlformatter.cpp  htmlformatter.h  kdevsgmlformatter.desktop  kdevxmlformatter.desktop  kdevxmlformatter.rc  main.cpp  sgmlformatter.cpp  sgmlformatter.h  xmlformatter.cpp  xmlformatter.h  xmlformatterplugin.cpp  xmlformatterplugin.h  xmlformatterpreferences.cpp  xmlformatterpreferences.h  xmlformatterwidget.ui
icons/: Makefile.am  Makefile.in
kmdi/: Makefile.am
kwrite/: Makefile.am  Makefile.in  ktextprint.cpp  ktextprint.h  kvmallocator.cpp  kvmallocator.h  kwattribute.cpp  kwattribute.h  kwbuffer.cpp  kwbuffer.h  kwdialog.cpp  kwdialog.h  kwdoc.cpp  kwdoc.h  kwriteIface_skel.cpp  kwrite_factory.cpp  kwrite_factory.h  kwtextline.cpp  kwtextline.h  kwview.cpp  kwview.h
language/: CMakeLists.txt  TODO  kdevmlsupport.desktop  kdevsgmlsupport.desktop  language_debug.h  languagesupport.cpp  languagesupport.h  parsejob.cpp  parsejob.h
languages/: CMakeLists.txt
lib/: .kateconfig  CMakeLists.txt  Makefile.am  basetreeview.cpp  basetreeview.h  dommodel.cpp  dommodel.h  dtdstruct.h  editorsource.cpp  editorsource.h  extfileinfo.cpp  extfileinfo.h  filecombo.cpp  filecombo.h  fileinfodlg.ui  filterableitemif.h  groupstorage.cpp  groupstorage.h  hacks.cpp  hacks.h  helper.cpp  helper.h  myprocess.cpp  myprocess.h  node.cpp  node.h  parseresult.h  qtag.cpp  qtag.h  quanta.kcfg  quantacoreif.cpp  quantacoreif.h  quantaexport.h  quantanetaccess.cpp  quantanetaccess.h  quantaprojectif.cpp  quantaprojectif.h  resizablewidget.cpp  resizablewidget.h  searchlinewidget.cpp  (+16 more)
messages/: Makefile.am  annotationoutput.cpp  annotationoutput.h  messageitem.cpp  messageitem.h  messageitemphp.cpp  messageitemphp.h  messageitemphp4.cpp  messageitemphp4.h  messageitemweblint.cpp  messageitemweblint.h  messageoutput.cpp  messageoutput.h
parser/: Makefile.am  Makefile.in  dtd.cpp  dtd.h  dtdparser.cpp  dtdparser.h  dtepcreationdlg.ui  node.cpp  node.h  parser.cpp  parser.h  parsercommon.cpp  parsercommon.h  qtag.cpp  qtag.h  saparser.cpp  saparser.h  tag.cpp  tag.h
parsers/: Makefile.am  node.cpp  node.h  parser.cpp  parser.h  parsercommon.cpp  parsercommon.h  qtag.cpp  qtag.h  sagroupparser.cpp  sagroupparser.h  saparser.cpp  saparser.h  tag.cpp  tag.h
phpdebug/: Makefile.am  phpdebugserversocket.cpp  phpdebugserversocket.h
plugins/: CMakeLists.txt  Makefile.am  cervisiaplugin.cpp  cervisiaplugin.h  pluginconfig.ui  plugineditor.ui  quantacmdplugin.cpp  quantacmdplugin.h  quantakpartplugin.cpp  quantakpartplugin.h  quantaplugin.cpp  quantaplugin.h  quantapluginconfig.cpp  quantapluginconfig.h  quantaplugineditor.cpp  quantaplugineditor.h  quantaplugininterface.cpp  quantaplugininterface.h  spellchecker.cpp  spellchecker.h
project/: Makefile.am  Makefile.in  copyto.cpp  copyto.h  copytodata.cpp  copytos.cpp  copytos.h  copytos.ui  eventconfigurationdlg.cpp  eventconfigurationdlg.h  eventconfigurationdlgs.ui  eventeditordlg.cpp  eventeditordlg.h  eventeditordlgs.ui  membereditdlg.cpp  membereditdlg.h  membereditdlgs.ui  newproject1.kdevdlg  newproject2.kdevdlg  project.cpp  project.h  project_url.h  projectitem.cpp  projectitem.h  projectlist.cpp  projectlist.h  projectnewfinal.cpp  projectnewfinal.h  projectnewfinals.cpp  projectnewfinals.h  projectnewfinals.ui  projectnewgeneral.cpp  projectnewgeneral.h  projectnewgeneraldata.cpp  projectnewgenerals.cpp  projectnewgenerals.h  projectnewgenerals.ui  projectnewgetfiles.cpp  projectnewgetfiles.h  projectnewgetfilesdata.cpp  (+36 more)
quantacore/: CMakeLists.txt  Makefile.am  dtds.cpp  dtds.h  kdevquantacore.desktop  kdevquantacore.rc  quantacommon.cpp  quantacommon.h  quantacorepart.cpp  quantacorepart.h  (+2 more)
(+5998 files in other folders)
