
add_subdirectory( config )
add_subdirectory( pics )
add_subdirectory( icons )
add_subdirectory( dtep )
add_subdirectory( toolbars )
add_subdirectory( templates )
add_subdirectory( statemachines )

########### install files ###############

install( FILES  tips  DESTINATION ${DATA_INSTALL_DIR}/quanta)

