noinst_LTLIBRARIES = libdialogs.la

libdialogs_la_SOURCES = copyto.cpp dirtydialog.ui dirtydlg.cpp donationdialog.ui parseroptionsui.ui dtdselectdialog.ui katefiledialog.cpp parseroptions.cpp previewfontoptions.cpp previewoptionss.ui previewoptions.cpp debuggeroptionss.ui filemaskss.ui filemasks.cpp styleoptionss.ui kategrepdialog.cpp abbreviations.ui abbreviation.cpp codetemplatedlgs.ui fourbuttonmessagebox.ui

METASOURCES = AUTO

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/quanta/tagdialogs $(all_includes)
