#1########################################################!@#$
####   Makefile.am generated automatically by KDEStudio   ####
#### WARNING! All changes made in this part will be lost! ####
##############################################################
SUBDIRS = highlight 
noinst_LIBRARIES = libkwrite.a



INCLUDES = $(all_includes)\
		-I$(top_srcdir)/quanta/kwrite/highlight
DEFS = -I. -I$(srcdir) -I$(top_srcdir)
libkwrite_a_METASOURCES = AUTO
libkwrite_a_SOURCES = \
		ktextprint.cpp\
		kwdialog.cpp\
		kwdoc.cpp\
		kwrite_factory.cpp\
		kwview.cpp\
		undohistory.cpp\
		kwriteIface_skel.cpp
EXTRA_DIST = \
		ktextprint.cpp\
		ktextprint.h\
		kwdialog.cpp\
		kwdialog.h\
		kwdoc.cpp\
		kwdoc.h\
		kwrite_factory.cpp\
		kwrite_factory.h\
		kwview.cpp\
		kwview.h\
		undohistory.cpp\
		undohistory.h\
		kwriteIface.h\
		kwriteIface.kidl\
		kwriteIface_skel.cpp
##############################################################
####                  END KDEStudio part                  ####
#2########################################################!@#$
