#1########################################################!@#$
####   Makefile.am generated automatically by KDEStudio   ####
#### WARNING! All changes made in this part will be lost! ####
##############################################################
SUBDIRS = highlight 
noinst_LIBRARIES = libkwrite.a



INCLUDES = $(all_includes)\
		-I$(top_srcdir)/quanta/kwrite/highlight
CXXFLAGS = -Wall 
DEFS = -I. -I$(srcdir) -I$(top_srcdir)
libkwrite_a_METASOURCES = AUTO
libkwrite_a_SOURCES = \
		kwriteIface_skel.cpp\
		ktextprint.cpp\
		kvmallocator.cpp\
		kwattribute.cpp\
		kwbuffer.cpp\
		kwdialog.cpp\
		kwdoc.cpp\
		kwrite_factory.cpp\
		kwtextline.cpp\
		kwview.cpp\
		undohistory.cpp
EXTRA_DIST = \
		kwriteIface.h\
		kwriteIface.kidl\
		kwriteIface_skel.cpp\
		ktextprint.cpp\
		ktextprint.h\
		kvmallocator.cpp\
		kvmallocator.h\
		kwattribute.cpp\
		kwattribute.h\
		kwbuffer.cpp\
		kwbuffer.h\
		kwdialog.cpp\
		kwdialog.h\
		kwdoc.cpp\
		kwdoc.h\
		kwrite_factory.cpp\
		kwrite_factory.h\
		kwtextline.cpp\
		kwtextline.h\
		kwview.cpp\
		kwview.h\
		undohistory.cpp\
		undohistory.h
##############################################################
####                  END KDEStudio part                  ####
#2########################################################!@#$
