####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = messageoutput.h messageitemphp4.h messageitem.h messageitemphp.h messageitemweblint.h 

####### kdevelop will overwrite this part!!! (end)############
noinst_LIBRARIES = libmessages.a

INCLUDES = $(all_includes)
DEFS = -I. -I$(srcdir) -I$(top_srcdir)
libmessages_a_METASOURCES = AUTO
libmessages_a_SOURCES = \
		messageoutput.cpp\
		messageitem.cpp\
		messageitemphp.cpp\
		messageitemweblint.cpp\
		messageitemphp4.cpp
