####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = messageoutput.h messageitem.cpp messageoutput.cpp messageitemweblint.cpp messageitemphp4.h messageitem.h messageitemphp4.cpp messageitemphp.h messageitemphp.cpp messageitemweblint.h 

####### kdevelop will overwrite this part!!! (end)############
noinst_LIBRARIES = libmessages.a

INCLUDES = $(all_includes)
METASOURCES = AUTO
libmessages_a_SOURCES = \
		messageoutput.cpp\
		messageitem.cpp\
		messageitemphp.cpp\
		messageitemweblint.cpp\
		messageitemphp4.cpp
