####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libparser.a

INCLUDES = $(all_includes)

libparser_a_METASOURCES = AUTO

libparser_a_SOURCES = qtag.cpp dtd.cpp node.cpp tag.cpp parser.cpp 


EXTRA_DIST = parser.cpp tag.h tag.cpp parser.h node.h node.cpp dtd.cpp dtd.h qtag.cpp qtag.h 

####### kdevelop will overwrite this part!!! (end)############

