####### kdevelop will overwrite this part!!! (begin)##########
noinst_LTLIBRARIES = libparser.la

INCLUDES = $(all_includes)

METASOURCES = AUTO

libparser_la_SOURCES = qtag.cpp dtd.cpp node.cpp tag.cpp parser.cpp 


EXTRA_DIST = parser.cpp tag.h tag.cpp parser.h node.h node.cpp dtd.cpp dtd.h qtag.cpp qtag.h 

####### kdevelop will overwrite this part!!! (end)############

