#1########################################################!@#$
####   Makefile.am generated automatically by KDEStudio   ####
#### WARNING! All changes made in this part will be lost! ####
##############################################################

noinst_LIBRARIES = libphpdebug.a



INCLUDES = $(all_includes)
DEFS = -I. -I$(srcdir) -I$(top_srcdir)
libphpdebug_a_METASOURCES = AUTO
libphpdebug_a_SOURCES = \
		phpdebugserversocket.cpp
EXTRA_DIST = \
		phpdebugserversocket.cpp\
		phpdebugserversocket.h
##############################################################
####                  END KDEStudio part                  ####
#2########################################################!@#$
