noinst_LTLIBRARIES = libplugins.la

INCLUDES = $(all_includes)

METASOURCES = AUTO

libplugins_la_SOURCES = spellchecker.cpp quantaplugininterface.cpp quantaplugineditor.cpp quantapluginconfig.cpp quantaplugin.cpp plugineditor.ui pluginconfig.ui

SUBDIRS = weblint php3dbg php4dbg framewizard csseditor

