noinst_LTLIBRARIES = libproject.la
METASOURCES = AUTO

libproject_la_SOURCES = projectoptions.ui projectnewgenerals.ui projectnewgeneral.cpp projectnewlocals.ui projectnewlocal.cpp rescanprj.cpp rescanprjdir.ui projectnewfinals.ui projectuploads.ui projectnewfinal.cpp projectupload.cpp project.cpp projectnewwebs.ui projectnewweb.cpp

INCLUDES = -I$(top_srcdir)/quanta/dialogs $(all_includes) -I$(top_builddir)/quanta/dialogs
