noinst_LTLIBRARIES = libproject.la
METASOURCES = AUTO

libproject_la_SOURCES = projectoptions.ui projectnewgenerals.ui projectnewgeneral.cpp projectnewlocals.ui projectnewlocal.cpp rescanprj.cpp rescanprjdir.ui projectnewfinals.ui projectuploads.ui projectnewfinal.cpp projectupload.cpp project.cpp projectnewwebs.ui projectnewweb.cpp

AM_CPPFLAGS = -I$(top_srcdir)/quanta -I$(top_srcdir)/quanta/parser -I$(top_srcdir)/quanta/treeviews -I$(top_srcdir)/quanta/dialogs -I$(top_builddir)/quanta/dialogs $(all_includes) 
